@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: Add DivideResultDivisor to result parser
 pts-core: Add libevent as possible external dependency
+pts-core: Alert the user when the test install directory is on a file-system mounted with 'noexec'
 
 Phoronix Test Suite 8.2.0 Milestone 1
 21 July 2018
